# vespercast

./: .gitignore  Makefile  README.md
backend/: .env.example  pyproject.toml
backend/apps/accounts/: models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/forecasts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/forecasts/migrations/: 0001_initial.py
backend/apps/forecasts/services/: astro.py  open_meteo.py  scorer.py
backend/apps/locations/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/locations/migrations/: 0001_initial.py
backend/apps/locations/services/: geocoding.py
backend/apps/notifications/: models.py
backend/apps/notifications/migrations/: 0001_initial.py
backend/apps/ratings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/ratings/migrations/: 0001_initial.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py  test.py
docs/: plan.md  todo.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/ForecastCard/: ForecastCard.module.css  ForecastCard.tsx
frontend/src/components/LocationSearch/: LocationSearch.module.css  LocationSearch.tsx
frontend/src/components/QualityMeter/: QualityMeter.module.css  QualityMeter.tsx
frontend/src/hooks/: useForecast.ts
frontend/src/pages/: HomePage.module.css  HomePage.tsx
frontend/src/types/: index.ts
(+2 files in other folders)
